--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,9 @@
     "d3": "^5.12.0",
     "element-ui": "^2.15.6",
     "jquery": "^3.4.1",
+    "vega": "^5.21.0",
+    "vega-embed": "^6.20.5",
+    "vega-lite": "^5.2.0",
     "vue": "^2.6.10",
     "vuex": "^3.0.1"
   },
