--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@lljj/vue-json-schema-form": "^1.10.0",
     "axios": "^0.24.0",
     "core-js": "^2.6.5",
     "d3": "^5.12.0",
