change d3 version, add d3-drag to package

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,7 +11,7 @@
     "@lljj/vue-json-schema-form": "^1.10.0",
     "axios": "^0.24.0",
     "core-js": "^2.6.5",
-    "d3": "^5.12.0",
+    "d3-drag": "^3.0.0",
     "element-ui": "^2.15.6",
     "jquery": "^3.4.1",
     "vega": "^5.21.0",
@@ -25,6 +25,7 @@
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
     "babel-eslint": "^10.0.1",
+    "d3": "^7.3.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "less": "^3.0.4",
