--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
     "axios": "^0.24.0",
     "core-js": "^2.6.5",
     "d3": "^5.12.0",
