--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.24.0",
     "core-js": "^2.6.5",
     "d3-drag": "^3.0.0",
+    "d3-save-svg": "^0.0.2",
     "element-ui": "^2.15.6",
     "jquery": "^3.4.1",
     "patch-package": "^6.4.7",
+    "save-svg-as-png": "^1.4.17",
     "vega": "^5.21.0",
     "vega-embed": "^6.20.5",
     "vega-lite": "^5.2.0",
